# Platformer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.cache/clangd/index/: _fixes.hpp.B25EC07243FD2E91.idx  _vectorize.hpp.5F320E848D2D009B.idx  common.hpp.C53E6C17692D71F9.idx  compute_common.hpp.63FABC300038C00E.idx  compute_vector_relational.hpp.E20F8D83C3E7DFBF.idx  constants.hpp.A806A823347C2D19.idx  constants.inl.29656F2DAAD2578A.idx  epsilon.hpp.6BCD6BFBD743F024.idx  epsilon.inl.2D1794BA7980279E.idx  exponential.hpp.2E97C298808A79F2.idx  file_reader.cpp.B32533A8C7C72B74.idx  file_reader.hpp.8152791A36D41015.idx  func_common.inl.6525FCEBC71F83C2.idx  func_exponential.inl.9382504D96A53491.idx  func_geometric.inl.ED862899231E73A8.idx  func_integer.inl.D1546858B5983E05.idx  func_matrix.inl.8BD3BB99BB634DF1.idx  func_packing.inl.8436EF5505C68447.idx  func_trigonometric.inl.9D6F0FE82A7955E8.idx  func_vector_relational.inl.29EBB34B4D007B6F.idx  fwd.hpp.9F8256172B428044.idx  game_object.cpp.54128C98225F6536.idx  game_object.hpp.75FD292F8582EF72.idx  gamemanager.cpp.C055C217151D15F0.idx  gamemanager.hpp.F40D45F4A4D49A86.idx  geometric.hpp.BED8968831559F0A.idx  glad.cpp.93DA671F514D9609.idx  glad.cpp.DB4EF7BBAEBEE676.idx  (+180 more)
include/: file_reader.hpp  platformer.hpp  window.hpp
include/collisions/: collision_detection.hpp  collisions.hpp
include/interfaces/: collidable.hpp  drawable.hpp  movable.hpp
include/models/: clock.hpp  game_object.hpp  gamemanager.hpp  input.hpp  player.hpp  scene.hpp  shader.hpp  shader_program_config.hpp  sprite.hpp  sprite_information.hpp
src/: file_reader.cpp  main.cpp  platformer.cpp  window.cpp
src/models/: clock.cpp  game_object.cpp  gamemanager.cpp  scene.cpp  shader.cpp  sprite.cpp
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
(+16 files in other folders)
